<resources>
    <string name="app_name">RecipeExplorer</string>
    <string name="createAcc"><u>Create Account</u></string>
    <string name="Login"><u>Login</u></string>
    <string name="baseline_person_description">Profile</string>
    <string name="baseline_return_description">Return</string>
    <string name="select_state">Select State</string>
    <string name="cuisine">Cuisine</string>
    <string name="search_clicked">Search Clicked</string>
    <string name="box_clicked">Box Clicked</string>
    <string name="add_to_cookbook">Add to Cookbook</string>
    <string name="start_challenge">Start Challenge</string>
    <string name="profile_button">profile_button</string>
    <string name="back_button">back_button</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_state">Recipe State</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="recipe_steps">Recipe Steps</string>
</resources>