<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light"
    tools:context=".MainActivity">

    <!-- Profile Button -->
    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/baseline_person_description"
        android:src="@drawable/baseline_person" />

    <!-- Return Button -->
    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="89dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/baseline_return_description"
        android:src="@drawable/baseline_return" />

    <!-- Search for Recipes Button -->
    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="133dp"
        android:text="@string/select_state" />

    <TextView
        android:id="@+id/boxTextView"
        android:layout_width="234dp"
        android:layout_height="37dp"
        android:layout_below="@id/searchButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="136dp"
        android:background="@android:color/darker_gray"
        android:padding="16dp"
        android:text="@string/empty"/>

    <Button
        android:id="@+id/cuisineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="130dp"
        android:text="@string/cuisine"
        android:visibility="gone" />

    <TextView
        android:id="@+id/secondBoxTextView"
        android:layout_width="237dp"
        android:layout_height="35dp"
        android:layout_below="@id/boxTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="134dp"
        android:background="@android:color/darker_gray"
        android:padding="16dp"
        android:text="@string/empty"
        android:visibility="gone" />

</RelativeLayout>



